--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=admin
 spring.datasource.password=admin
+server.port=8081
