--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=admin
 spring.datasource.password=admin
 server.port=8081
+
+couponService.url=http://localhost:8081/couponapi/coupons/
